# ocaml-bls12-381-signature

./: .gitignore  .gitlab-ci.yml  CHANGES.md  README.md  bls12-381-signature.opam  bls12-381-signature.opam.template  dune-project  package-lock.json  package.json
.ci/js/: .eslintrc.js
benches/: bench_signature.ml  dune
src/: bls12_381_signature.ml  bls12_381_signature.mli  dune
src/bindings/: blst_bindings_stubs.c
test/: .npmrc  dune  node_wrapper.ml  package.json  preload.js  test_aggregated_signature.ml  test_signature.ml
utils/: dune  generate_test_vectors_from_bls_sigs_ref_for_blst.ml
