opam-version: "2.0"
authors: [ "Danny Willems <be.danny.willems@gmail.com>" ]
maintainer: [ "Danny Willems <be.danny.willems@gmail.com>" ]
synopsis: "Implementation of BLS signatures for the pairing-friendly curve BLS12-381"
homepage: "https://gitlab.com/dannywillems/ocaml-bls12-381-signature"
dev-repo: "git+https://gitlab.com/dannywillems/ocaml-bls12-381-signature.git"
bug-reports: "https://gitlab.com/dannywillems/ocaml-bls12-381-signature/issues"
license: "MIT"
depends: [
  "ocaml" {>= "4.08"}
  "dune" {>= "2.8.4"}
  "bls12-381" {>= "5.0.0"}
  "alcotest" {with-test}
  "bisect_ppx" {with-test & >= "2.5"}
  "integers_stubs_js" {with-test}
]
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
run-test: [[ "dune" "runtest" "-p" name "-j" jobs ]]
available: arch != "ppc64" & arch != "arm32" & arch != "x86_32"
x-ci-accept-failures: [
  # because of -Werror
  "centos-7"
  "oraclelinux-7"
]
pin-depends: [
  ["bls12-381.5.0.0" "git+https://gitlab.com/dannywillems/ocaml-bls12-381#5.0.0-rc.0"]
]
