(copy_files bindings/blst_bindings_stubs.c)

(copy_files bindings/blst_bindings_stubs.js)

(library
 (name bls12_381_signature)
 (public_name bls12-381-signature)
 (library_flags :standard -linkall -ccopt -lpthread)
 (modules bls12_381_signature)
 (foreign_stubs
  (language c)
  (flags -Wall -Wextra)
  (names blst_bindings_stubs))
 (js_of_ocaml
  (javascript_files blst_bindings_stubs.js))
 (libraries bls12-381))

(executable
 (name gen_wasm_needed_names)
 (modules gen_wasm_needed_names)
 (libraries re))

(rule
 (target needed-wasm-names)
 (mode promote)
 (deps
  (:files blst_bindings_stubs.js))
 (action
  (with-outputs-to
   %{target}
   (run ./gen_wasm_needed_names.exe %{files}))))
