(env
 (_
  ; We do not want to have the JavaScript tests executed when `dune build
  ; @runtest` is called. It would imply to have emcc as a dependency in the
  ; repository ocaml/opam-repository and it is not something we have planned to
  ; work on for the moment.
  ; JavaScript can be run using `dune build @runtest-js`
  (js_of_ocaml
   (runtest_alias runtest-js))))

(tests
 (names test_aggregated_signature test_signature)
 (modes native js)
 (deps
  (source_tree test_vectors))
 (libraries bls12-381-signature bls12-381 alcotest integers_stubs_js))

(rule
 (alias runtest-js)
 (deps
  (source_tree test_vectors)
  preload.js
  package.json
  .npmrc
  (:test test_signature.bc.js))
 (action
  (progn
   (run npm install)
   (run node -- preload.js %{test}))))

(rule
 (alias runtest-js)
 (deps
  (source_tree test_vectors)
  preload.js
  package.json
  .npmrc
  (:test test_aggregated_signature.bc.js))
 (action
  (progn
   (run npm install)
   (run node -- preload.js %{test}))))
